# autogen-movie-ticket

./: README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_movie_ticket/: hosting.py  main.py
autogen_movie_ticket/agents/: customer_agent.py  movie_date_agent.py  movie_dates_agent.py  movie_name_agent.py  movie_times_agent.py  movie_type_agent.py  num_ticket_verifier_agent.py  theatre_agent.py
autogen_movie_ticket/models/: movie.py
autogen_movie_ticket/protocols/: i_orchestrator.py
autogen_movie_ticket/services/: azure_openai_service.py
autogen_movie_ticket/tools/: tools.py
tests/autogen_movie_ticket/models/: test_generation_result.py  test_movie.py
tests/autogen_movie_ticket/services/: test_azure_openai_service.py
tests/autogen_movie_ticket/tools/: test_tools.py
