[project]
name = "autogen-movie-ticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.4.9",
    "autogen-ext>=0.4.9",
    "azure-core>=1.32.0",
    "azure-identity>=1.21.0",
    "lagom>=2.7.5",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.10.0",
]

[tool.ruff]
exclude = ["typings"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["typings", ".venv", ".vscode", ".git"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "autogen_movie_ticket/hosting.py",
    "autogen_movie_ticket/protocols/*",
    "autogen_movie_ticket/main.py",
    "autogen_movie_ticket/agents/*.py"
]